--- a/MyToDoList/index.html
+++ b/MyToDoList/index.html
@@ -35,9 +35,9 @@
       <table>
         <tr>
           <th id="todoLabel">TODO</th>
-          <th>Priority</th>
-          <th id="dateLabel">Deadline</th>
-          <th>Done</th>
+          <th>優先度</th>
+          <th id="dateLabel">締切</th>
+          <th class="disabled">完了</th>
         </tr>
       </table>
     </main>
