--- a/MyLottery/index.html
+++ b/MyLottery/index.html
@@ -15,11 +15,11 @@
           <section>
             <h1>今日の運勢は？</h1>
             <img id="box" src="./limages/omikujibox_image.png" alt="おみくじの画像">
-            <p id="result" >占う</p>
+            <p id="result" style="opacity:0">占う</p>
             <!-- <img src="fortune" class="fortune"> -->
           </section>
 
-          <button id="btn" class="animebtn">おみくじを引く</button>
+          <button id="btn" class="anime-btn">おみくじを引く</button>
         </div>
       </div>
     </main>
